# DKPlaylister

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  alembic.ini  last_grok  pyproject.toml
alembic/: env.py
alembic/versions/: 33c29348e895_initial_schema.py  8efdfa768246_add_pitches_table.py
data/: example_playlists.json  playlister_parsed.json  playlister_ranked.json
data/discovery_presets/: band_1.json
data/playlister_imports/: Indie_Folk_2026_Daily_Worklist_Top40.csv  Indie_Folk_2026_Tracker.csv  Indie_Folk_2026_Tracker.xlsx  README_Indie_Folk_Tracker.md
docs/: data-model-v2.md  database-migrations.md  foundation-tools.md  getting-started.md  phase-0-hardening-plan-detailed.md  phase-0-hardening-plan.md  phase-1-discovery-mining-plan.md  phase-1-hardening-plan-detailed.md  phase-1-hardening-plan.md  prioritization.md  spotify-ai-guidelines.md  spotify-user-auth-plan.md
inputs/band/kilynn-ross/playlists/: real_test.txt  sample.txt  sample2.txt
inputs/band/kilynn-ross/style/: base.txt
src/dkplaylister/: __init__.py  cli.py  discovery.py  models.py  scoring.py  spotify.py  storage.py  utils.py
src/dkplaylister/llm/: __init__.py  base.py  grok.py
tests/: test_models.py
ui/: streamlit_app.py
